@@ -151,7 +151,7 @@ class ConfigModelApplication extends JModelForm
 		}
 
 		// Attempt to write the configuration file as a PHP class named JConfig.
-		if (!JFile::write($file, $config->toString('PHP', 'config', array('class' => 'JConfig')))) {
+		if (!JFile::write($file, $config->toString('PHP', 'config', array('class' => 'JConfig', 'closingtag' => false)))) {
 			$this->setError(JText::_('Config_File_Write_Failed'));
 			return false;
 		}
